# API_ASR

./: README.md  pyproject.toml
asr-handover/: README.md
asr-handover/audio/: audio.py
asr-handover/audio/audio_generate/: speaker_audio.py
asr-handover/audio/audio_generate/realtime_meeting_assistant/: config.py  main.py  requirements.txt
src/asr_service/: asr_engine.py  main.py  speaker_audio.py
src/asr_service/asr_core/: README.md  config.py  speaker_manager.py  utils.py
src/asr_service/asr_core/teacher_db/: teacher_db.pkl
tests/: test_udp_stream.py
